--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
                 <div class="index-title--container">
                     <div class="index-title--text underline">
                         <a href="{{ url_for('index') }}">
-                            Disinformation
+                            Fact-Finding
                         </a>
                     </div>
                 </div>
