--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 <div class="index-title--container">
                     <div class="index-title--text underline">
                         <a href="{{ url_for('index') }}">
-                            Disinformation
+                            Fact-Finding
                         </a>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
             <div class="index-main--container">
                 <div class="index-center--container">
                     <div class="index-center--title">
-                        Disinformation
+                        Fact-Finding
                     </div>
                     <div class="index-center--subtitle">
                         Test your ability to detect fake news headlines.
