--- a/templates/play.html
+++ b/templates/play.html
@@ -23,7 +23,7 @@
                 <div class="index-title--container">
                     <div class="index-title--text underline">
                         <a href="{{ url_for('index') }}">
-                            Disinformation
+                            Fact-Finding
                         </a>
                     </div>
                 </div>
