--- a/templates/about.html
+++ b/templates/about.html
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="about-card--text">
-                                In showcasing fake and automatically-generated news headlines, this project highlights how organizations such as Russia's Internet Research Agency (IRA) might create fake news. Real news headlines, heuristic algorithms, and open-source code are readily-available tools in the internet era. This project also critiques how difficult it is to distinguish between real and fake news headlines. It follows that the ease of creating (hopefully, in this case) believable disinformation suggests that 
+                                In showcasing fake and automatically-generated news headlines, this project highlights how organizations such as Russia's <a target="_blank" class="underline--inline" href="https://en.wikipedia.org/wiki/Internet_Research_Agency">Internet Research Agency (IRA)</a> might create fake news. Real news headlines, heuristic algorithms, and open-source code are readily-available tools in the internet era. This project also critiques how difficult it is to distinguish between real and fake news headlines, which effect manual input would likely amplify.<br><br>It follows that the ease of creating believable disinformation suggests that consuming mainstream news sources is one way citizens can push back against disinformation's dangers. Aditionally, learning to judge news sources—especially when consuming information on social media passively—is important. 
                             </div>
                         </div>
                         <div class="about-card--section">
