--- a/templates/about.html
+++ b/templates/about.html
@@ -9,6 +9,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <!-- Hypher attempt -->
+    <script src="http://zeptojs.com/zepto.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hypher-for-jquery@1.0.3/dist/jquery.hypher.min.js"></script>
 </head>
 
 <body>
@@ -118,6 +122,9 @@
         </div>
         
     </div>
+    <script type="text/javascript">
+        $('.please').hyphenate();
+    </script>
 </body>
 
 </html>
